# ovpn-mgmt-codec

./: Cargo.toml  README.md  ci-details.md  docker-compose.yml  specs.md  test-mgmt.ovpn  test-mgmt.ps1  test-mgmt.sh
.claude/: settings.json
.github/workflows/: coverage.yml  rust.yml
conformance/: Dockerfile.server  client-password.ovpn
openvpn-mgmt-cli/: Cargo.toml  README.md
openvpn-mgmt-cli/src/: main.rs
openvpn-mgmt-codec/: Cargo.toml  MIGRATION-0.6-to-0.7.md  README.md
openvpn-mgmt-codec/examples/: client_mode.rs  server_mode.rs
openvpn-mgmt-codec/src/: auth.rs  client.rs  client_deny.rs  client_event.rs  codec.rs  command.rs  crv1_challenge.rs  kill_target.rs  lib.rs  log_level.rs  message.rs  need_ok.rs  openvpn_state.rs  parsed_response.rs  proxy_action.rs  redacted.rs  remote_action.rs  signal.rs  split.rs  status.rs  status_format.rs  stream.rs  stream_mode.rs  timestamp.rs  transport_protocol.rs  unrecognized.rs  version_info.rs
openvpn-mgmt-codec/tests/: PROTOCOL_TEST_DATA_SOURCES.md  adversarial_roundtrip.rs  boundary_conditions.rs  conformance.rs  conformance_password.rs  conformance_remote.rs  conformance_server.rs  conformance_wire_format.rs  decoder_recovery.rs  framed_integration.rs  notification_edge_cases.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  protocol_test.rs  stateful_sequences.rs
openvpn-mgmt-codec/tests/common/: mod.rs
openvpn-mgmt-codec/tests/defensive/: README.md  main.rs  real_world.rs
openvpn-mgmt-codec/tests/fixtures/: client_connect_tls_rich.txt  client_cr_response.txt  full_connection_lifecycle.txt  help_2_6_9.txt  log_all_flags.txt  log_history_real.txt  packet_filter.txt  state_history.txt  state_ipv6.txt  state_transitions.txt  status_interleaved.txt  status_v1_server_empty.txt  status_v1_server_many_clients.txt  status_v2_full.txt  status_v2_old.txt  version_2_6_9.txt  version_old.txt
openvpn-mgmt-frame/: Cargo.toml
openvpn-mgmt-frame/src/: decoder.rs  encoder.rs  frame.rs  lib.rs
openvpn-mgmt-ui/: Cargo.toml
openvpn-mgmt-ui/src/: actor.rs  chart.rs  main.rs  message.rs  style.rs  view.rs
ovpn-mgmt-codec/src/: client_event.rs  codec.rs  command.rs  lib.rs  message.rs  openvpn_state.rs  signal.rs
ovpn-mgmt-codec/tests/: protocol_test.rs
src/: auth.rs  codec.rs  command.rs  kill_target.rs  lib.rs  message.rs  need_ok.rs  proxy_action.rs  remote_action.rs  signal.rs  status_format.rs  stream_mode.rs  unrecognized.rs
tests/: protocol_test.rs  protocol_test_data.rs
tests/fixtures/: client_connect_full_env.txt  client_connect_sequential.txt  client_disconnect.txt  client_established.txt  client_reauth.txt  help.txt  status_v1_client.txt  status_v1_server.txt  status_v2.txt  status_v3.txt  version.txt
