[package]
name = "openvpn-mgmt-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
futures = "0.3"
openvpn-mgmt-codec = { path = "../openvpn-mgmt-codec" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "io-std"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
