[package]
name = "openvpn-mgmt-cli"
version = "1.0.0-rc.1"
edition = "2024"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
openvpn-mgmt-codec = { path = "../openvpn-mgmt-codec" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "io-std"] }
tokio-util = { version = "0.7", features = ["codec"] }
