[package]
name = "openvpn-mgmt-codec"
version = "0.6.0"
edition = "2024"
description = "OpenVPN management protocol codecs (tokio-util en/decoder implementations)."
repository = "https://github.com/barafael/openvpn-mgmt-codec"
license = "MIT OR Apache-2.0"

[dependencies]
better_default = "1.0.5"
bytes = "1"
derive_more = { version = "1", features = ["debug", "display"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"

[features]
conformance-tests = []

[dev-dependencies]
futures = "0.3"
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
tracing-test = "0.2"
