[package]
name = "openvpn-mgmt-codec"
version = "1.0.0-rc.2"
edition = "2024"
rust-version = "1.85"
description = "OpenVPN management protocol codecs (tokio-util en/decoder implementations)."
repository = "https://github.com/barafael/openvpn-mgmt-codec"
license = "MIT OR Apache-2.0"
keywords = ["openvpn", "management", "protocol", "codec", "tokio"]
categories = ["network-programming", "encoding"]

[dependencies]
base64 = "0.22"
better_default = "1"
bon = "3"
bytes = "1"
derive_more = { version = "1", features = ["debug", "display"] }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"

[features]
conformance-tests = []
serde = ["dep:serde"]

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
proptest = "1"
proptest-state-machine = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
test-case = "3"
tracing-test = "0.2"
