[package]
name = "openvpn-mgmt-frame"
version = "1.0.0-rc.3"
edition = "2024"
rust-version = "1.85"
description = "Low-level line framing for the OpenVPN management protocol."
repository = "https://github.com/barafael/openvpn-mgmt-codec"
license = "MIT OR Apache-2.0"
keywords = ["openvpn", "management", "protocol", "codec", "framing"]
categories = ["network-programming", "encoding"]

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"

[features]
serde = ["dep:serde"]
